fixed overlaping issue

--- a/components/persons/Persons.css
+++ b/components/persons/Persons.css
@@ -13,7 +13,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 .Persons img {
